--- a/app/index.html
+++ b/app/index.html
@@ -160,7 +160,7 @@
 								<span>Radiustheme</span>
 							</a>
 							<div class="products__item-star">
-								(05)
+								<div class="rate-star"></div>(<span>05</span>)
 							</div>
 						</div>
 					</div>
@@ -185,7 +185,7 @@
 								<span>Radiustheme</span>
 							</a>
 							<div class="products__item-star">
-								(05)
+								<div class="rate-star"></div>(<span>05</span>)
 							</div>
 						</div>
 					</div>
@@ -210,7 +210,7 @@
 								<span>Radiustheme</span>
 							</a>
 							<div class="products__item-star">
-								(05)
+								<div class="rate-star"></div>(<span>05</span>)
 							</div>
 						</div>
 					</div>
@@ -235,7 +235,7 @@
 								<span>Radiustheme</span>
 							</a>
 							<div class="products__item-star">
-								(05)
+								<div class="rate-star"></div>(<span>05</span>)
 							</div>
 						</div>
 					</div>
@@ -260,7 +260,7 @@
 								<span>Radiustheme</span>
 							</a>
 							<div class="products__item-star">
-								(05)
+								<div class="rate-star"></div>(<span>05</span>)
 							</div>
 						</div>
 					</div>
@@ -285,7 +285,7 @@
 								<span>Radiustheme</span>
 							</a>
 							<div class="products__item-star">
-								(05)
+								<div class="rate-star"></div>(<span>05</span>)
 							</div>
 						</div>
 					</div>
@@ -310,7 +310,7 @@
 								<span>Radiustheme</span>
 							</a>
 							<div class="products__item-star">
-								(05)
+								<div class="rate-star"></div>(<span>05</span>)
 							</div>
 						</div>
 					</div>
@@ -335,7 +335,7 @@
 								<span>Radiustheme</span>
 							</a>
 							<div class="products__item-star">
-								(05)
+								<div class="rate-star"></div>(<span>05</span>)
 							</div>
 						</div>
 					</div>
@@ -348,6 +348,415 @@
 		</div>
 	</section>
 
+	<section class="product-slider">
+		<div class="container-fluid">
+			<div class="product-slider__title title">
+				This Week Trending Products
+			</div>
+			<div class="product-slider__inner">
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+				<div class="products__item mix">
+					<a class="products__item-img" href="#" style="background-image: url(images/content/product-item.jpg);"></a>
+					<div class="products__item-content">
+						<div class="products__item-name">
+							<a class="products__item-title" href="">
+								Responsive Mobile APP
+							</a>
+							<a class="products__item-category" href="">
+								Site Template
+							</a>
+						</div>
+						<div class="products__item-price">
+							$19
+						</div>
+					</div>
+					<div class="products__item-info">
+						<a class="products__item-autor" href="#">
+							<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+							<span>Radiustheme</span>
+						</a>
+						<div class="products__item-star">
+							<div class="rate-star"></div>(<span>05</span>)
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 
 
