--- a/app/index.html
+++ b/app/index.html
@@ -757,9 +757,73 @@
 			</div>
 		</div>
 	</section>
-	
-	<section class="advantages"></section>
 
+
+
+
+
+
+
+	<section class="advantages">
+		<div class="container">
+			<div class="advantages__title title">
+				Why You Choose Foxtar Market Place?
+			</div>
+			<div class="advantages__inner">
+				<div class="advantages__item">
+					<div class="advantages__item-images">
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="60" height="60" viewBox="0 0 32 32">
+							<title>locked</title>
+							<path
+								d="M29 32h-26c-0.552 0-1-0.447-1-1v-16c0-0.553 0.448-1 1-1h3v-4c0-5.523 4.477-10 10-10s10 4.477 10 10v4h3c0.553 0 1 0.447 1 1v16c0 0.553-0.447 1-1 1zM22 9.5c0-3.038-2.687-5.5-6-5.5s-6 2.462-6 5.5v4.5h12v-4.5z">
+							</path>
+						</svg>
+					</div>
+					<div class="advantages__item-title">
+						Easily Buy & Sell
+					</div>
+					<div class="advantages__item-text">
+						Dorem Ipsum is simply dummy text of the pring and typesetting industry.
+						Lorem Ipsum has been the industry's
+						standaum.
+					</div>
+				</div>
+				<div class="advantages__item">
+					<div class="advantages__item-images">
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="0 0 20 20">
+							<title>gift</title>
+							<path
+								d="M14.83 4h5.17v6h-1v10h-18v-10h-1v-6h5.17c-0.11-0.3-0.174-0.646-0.174-1.008 0-1.657 1.343-3 3-3 0.772 0 1.475 0.291 2.007 0.77l-0.003-0.002c0.529-0.476 1.233-0.768 2.004-0.768 1.657 0 3 1.343 3 3 0 0.361-0.064 0.708-0.181 1.029l0.007-0.021zM8 10h-5v8h5v-8zM12 10v8h5v-8h-5zM8 6h-6v2h6v-2zM12 6v2h6v-2h-6zM8 4c0.552 0 1-0.448 1-1s-0.448-1-1-1v0c-0.552 0-1 0.448-1 1s0.448 1 1 1v0zM12 4c0.552 0 1-0.448 1-1s-0.448-1-1-1v0c-0.552 0-1 0.448-1 1s0.448 1 1 1v0z">
+							</path>
+						</svg>
+					</div>
+					<div class="advantages__item-title">
+						Quality Products
+					</div>
+					<div class="advantages__item-text">
+						Dorem Ipsum is simply dummy text of the pring and typesetting industry.
+						Lorem Ipsum has been the industry's
+						standaum.
+					</div>
+				</div>
+				<div class="advantages__item">
+					<div class="advantages__item-images">
+						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="86" height="86" viewBox="0 0 24 24">
+							<title>heart</title>
+							<path
+								d="M20.133 5.317c0.88 0.881 1.319 2.031 1.319 3.184s-0.44 2.303-1.319 3.182l-8.133 8.133-8.133-8.133c-0.879-0.879-1.318-2.029-1.318-3.183s0.439-2.304 1.318-3.183 2.029-1.318 3.183-1.318 2.304 0.439 3.183 1.318l1.060 1.060c0.391 0.391 1.024 0.391 1.414 0l1.062-1.062c0.879-0.879 2.029-1.318 3.182-1.317s2.303 0.44 3.182 1.319zM21.547 3.903c-1.269-1.269-2.934-1.904-4.596-1.905s-3.327 0.634-4.597 1.903l-0.354 0.355-0.353-0.353c-1.269-1.269-2.935-1.904-4.597-1.904s-3.328 0.635-4.597 1.904-1.904 2.935-1.904 4.597 0.635 3.328 1.904 4.597l8.84 8.84c0.391 0.391 1.024 0.391 1.414 0l8.84-8.84c1.269-1.269 1.904-2.934 1.905-4.596s-0.634-3.327-1.905-4.598z">
+							</path>
+						</svg>
+					</div>
+					<div class="advantages__item-title">
+						100% Secure Payment
+					</div>
+					<div class="advantages__item-text">
+						Dorem Ipsum is simply dummy text of the pring and typesetting industry.
+						Lorem Ipsum has been the industry's
+						standaum.
+					</div>
+	</section>
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
