--- a/app/index.html
+++ b/app/index.html
@@ -826,9 +826,6 @@
 	</section>
 
 
-
-
-
 	<section class="author" style="background-image: url(../images/author-bg.jpg);">
 		<div class="author__box">
 			<div class="author__title">
@@ -839,8 +836,41 @@
 				Become A Author
 			</a>
 		</div>
+	</section>
 
 
+
+
+
+	<section class="tutorial">
+		<div class="container">
+			<div class="tutorial__title title">
+				Free Monthly Tutorials To Help You With Your Project
+			</div>
+			<div class="tutorial__inner">
+				<div class="tutorial__item">
+					<div class="tutorial__item-images" style="background-image: url(images/content/tutorial.jpg);">
+					</div>
+					<div class="tutorial__item-title">
+						Web Design Tutorials
+					</div>
+				</div>
+				<div class="tutorial__item">
+					<div class="tutorial__item-images" style="background-image: url(images/content/tutorial.jpg);">
+					</div>
+					<div class="tutorial__item-title">
+						WordPress Tutorials
+					</div>
+				</div>
+				<div class="tutorial__item">
+					<div class="tutorial__item-images" style="background-image: url(images/content/tutorial.jpg);">
+					</div>
+					<div class="tutorial__item-title">
+						HTML & CSS Tutorials
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 
 
