--- a/app/new-item.html
+++ b/app/new-item.html
@@ -138,7 +138,6 @@
 			<section class="product-page">
 				<div class="container">
 					<div class="produck-page__inner">
-
 						<aside class="product-page__aside">
 							<div class="category aside__item">
 								<div class="aside__title">
@@ -164,7 +163,6 @@
 								<div class="aside__title">
 									Top 10 Sellers
 								</div>
-
 								<div class="aside__product-item">
 									<div class="products__item">
 										<a class="products__item-img" href="#"
@@ -245,11 +243,12 @@
 										</div>
 									</div>
 								</div>
-
-
 								<a class="top-sellers__link" href="#">View All</a>
 							</div>
 						</aside>
+
+
+
 						<div class="product-page__content">
 							<div class="product-page__filter">
 								<div class="product-page__filter-sort">
@@ -274,64 +273,16 @@
 											<a class="products__item-category" href="">
 												Site Template
 											</a>
-										</div>
-										<div class="products__item-price">
-											$19
-										</div>
-									</div>
-									<div class="products__item-info">
-										<a class="products__item-autor" href="#">
-											<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
-											<span>Radiustheme</span>
-										</a>
-										<div class="products__item-star">
-											<div class="rate-star"></div>(<span>05</span>)
-										</div>
-									</div>
-								</div>
-								<div class="products__item">
-									<a class="products__item-img" href="#"
-										style="background-image: url(images/content/product-item.jpg);"></a>
-									<div class="products__item-content">
-										<div class="products__item-name">
-											<a class="products__item-title" href="">
-												Responsive Mobile APP
-											</a>
-											<a class="products__item-category" href="">
-												Site Template
-											</a>
-										</div>
-										<div class="products__item-price">
-											$19
-										</div>
-									</div>
-									<div class="products__item-info">
-										<a class="products__item-autor" href="#">
-											<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
-											<span>Radiustheme</span>
-										</a>
-										<div class="products__item-star">
-											<div class="rate-star"></div>(<span>05</span>)
-										</div>
-									</div>
-								</div>
-								<div class="products__item">
-									<a class="products__item-img" href="#"
-										style="background-image: url(images/content/product-item.jpg);"></a>
-									<div class="products__item-content">
-										<div class="products__item-name">
-											<a class="products__item-title" href="">
-												Responsive Mobile APP
-											</a>
-											<a class="products__item-category" href="">
-												Site Template
-											</a>
-										</div>
-										<div class="products__item-price">
-											$19
-										</div>
-									</div>
+											<div class="product__item-text">
+												Pimply dummy text of the printing and typesetting industry.
+											</div>
 
+										</div>
+										<div class="products__item-price">
+											$19
+											<span>Sales ( 11 ) </span>
+										</div>
+									</div>
 									<div class="products__item-info">
 										<a class="products__item-autor" href="#">
 											<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
@@ -339,6 +290,79 @@
 										</a>
 										<div class="products__item-star">
 											<div class="rate-star"></div>(<span>05</span>)
+										</div>
+										<div class="products__item-list">
+											<a class="icon-comment-o" href="#">(<span>10</span>)</a>
+											<div class="icon-heart-o">(<span>20</span>)</div>
+										</div>
+									</div>
+								</div>
+								<div class="products__item">
+									<a class="products__item-img" href="#"
+										style="background-image: url(images/content/product-item.jpg);"></a>
+									<div class="products__item-content">
+										<div class="products__item-name">
+											<a class="products__item-title" href="">
+												WISTIA Corporate
+											</a>
+											<a class="products__item-category" href="">
+												Site Template
+											</a>
+											<div class="product__item-text">
+												Pimply dummy text of the printing and typesetting industry.
+											</div>
+										</div>
+										<div class="products__item-price">
+											$19
+											<span>Sales ( 11 ) </span>
+										</div>
+									</div>
+									<div class="products__item-info">
+										<a class="products__item-autor" href="#">
+											<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+											<span>Radiustheme</span>
+										</a>
+										<div class="products__item-star">
+											<div class="rate-star"></div>(<span>05</span>)
+										</div>
+										<div class="products__item-list">
+											<a class="icon-comment-o" href="#">(<span>10</span>)</a>
+											<div class="icon-heart-o">(<span>20</span>)</div>
+										</div>
+									</div>
+								</div>
+								<div class="products__item">
+									<a class="products__item-img" href="#"
+										style="background-image: url(images/content/product-item.jpg);"></a>
+									<div class="products__item-content">
+										<div class="products__item-name">
+											<a class="products__item-title" href="">
+												WISTIA Corporate
+											</a>
+											<a class="products__item-category" href="">
+												Site Template
+											</a>
+											<div class="product__item-text">
+												Pimply dummy text of the printing and typesetting industry.
+											</div>
+
+										</div>
+										<div class="products__item-price">
+											$19
+											<span>Sales ( 11 ) </span>
+										</div>
+									</div>
+									<div class="products__item-info">
+										<a class="products__item-autor" href="#">
+											<div class="avatar" style="background-image: url(images/content/user.jpg);"> </div>
+											<span>Radiustheme</span>
+										</a>
+										<div class="products__item-star">
+											<div class="rate-star"></div>(<span>05</span>)
+										</div>
+										<div class="products__item-list">
+											<a class="icon-comment-o" href="#">(<span>10</span>)</a>
+											<div class="icon-heart-o">(<span>20</span>)</div>
 										</div>
 									</div>
 								</div>
@@ -346,9 +370,9 @@
 							<div class="pagination">
 								<ul class="pagination__list">
 									<li><span class="active" href="#">1</span></li>
-									<li><a class="active" href="#">2</a></li>
-									<li><a class="active" href="#">3</a></li>
-									<li><a class="active" href="#">4</a></li>
+									<li><a class="" href="#">2</a></li>
+									<li><a class="" href="#">3</a></li>
+									<li><a class="" href="#">4</a></li>
 								</ul>
 							</div>
 						</div>
