adedd adaptive header and footer

--- a/app/new-item.html
+++ b/app/new-item.html
@@ -103,6 +103,9 @@
 					</div>
 				</div>
 			</header>
+
+
+
 			<section class="search page-search" style="background-image: url(../images/search-bg.jpg);">
 				<div class="contaner">
 					<div class="search__inner">
@@ -257,7 +260,7 @@
 									<button class="icon-sort"></button>
 								</div>
 								<div>
-									<button class="icon-th-large active"></button>
+									<button class="icon-th-large"></button>
 									<button class="icon-th-list"></button>
 								</div>
 							</div>
@@ -381,12 +384,14 @@
 			</section>
 
 
+
+
 		</div>
 		<footer class="footer">
 			<div class="footer__content">
 				<div class="container">
 					<div class="footer__inner">
-						<div class="footer__col">
+						<div class="footer__col footer__col-adress">
 							<div class="footer__col-title">
 								About Company
 							</div>
@@ -430,7 +435,7 @@
 							<div class="footer__col-title">
 								Follow Us On
 							</div>
-							<ul class="footer__social-link">
+							<ul class="footer__social-link footer__col-social">
 								<li><a class="link-facebook" href="#"></a></li>
 								<li><a class="link-twitter" href="#"></a></li>
 								<li><a class="link-youtube" href="#"></a></li>
@@ -465,7 +470,6 @@
 
 
 	</div>
-
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="js/libs.min.js"></script>
