--- a/app/new-item.html
+++ b/app/new-item.html
@@ -131,7 +131,7 @@
 					<div class="breadcrumbs__inner">
 						<ul class="breadcrumbs__list">
 							<li><a href="#">Home</a></li>
-							<li><a href="#">Product Page</a></li>
+							<li><span>Product Page</span></li>
 						</ul>
 					</div>
 				</div>
