adedd settings and profile

--- a/app/product-one.html
+++ b/app/product-one.html
@@ -255,8 +255,6 @@
 
 
 
-
-
 			<section class="search page-search" style="background-image: url(../images/search-bg.jpg);">
 				<div class="contaner">
 					<div class="search__inner">
@@ -301,7 +299,7 @@
 							<div class="product-one__title">
 								GTBuilder - Construction & Building WordPress Theme
 							</div>
-							<p> class="product-one__text">
+							<p class="product-one__text">
 								Bmply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard
 								dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
 								a type specimen book. It has survived noning essentially unchanged.
@@ -394,6 +392,7 @@
 									</div>
 
 
+
 									<div class="product-one__more-icons">
 										<div class="product-one__more-icon productmini">
 											<div class="productmini__images" style="background-image: url(images/content/mini.jpg);"></div>
@@ -406,6 +405,7 @@
 									</div>
 
 
+
 									<div class="product-one__more-icons">
 										<div class="product-one__more-icon productmini">
 											<div class="productmini__images" style="background-image: url(images/content/mini.jpg);"></div>
@@ -416,6 +416,7 @@
 											</div>
 										</div>
 									</div>
+
 
 
 									<div class="product-one__more-icons">
@@ -430,6 +431,7 @@
 									</div>
 
 
+
 									<div class="product-one__more-icons">
 										<div class="product-one__more-icon productmini">
 											<div class="productmini__images" style="background-image: url(images/content/mini.jpg);"></div>
@@ -440,6 +442,7 @@
 											</div>
 										</div>
 									</div>
+
 
 
 									<div class="product-one__more-icons">
@@ -455,7 +458,6 @@
 								</div>
 							</div>
 						</div>
-
 						<aside class="product-one__aside">
 							<div class="aside__item product__price">
 								<div class="aside__title">
@@ -472,7 +474,7 @@
 								</div>
 								<button class="icon-shopping-cart">Add To Cart</button>
 								<button class="icon-heart-o">Add To Favourites</button>
-								<button >Buy Now</button>
+								<button>Buy Now</button>
 							</div>
 							<div class="aside__item">
 								<div class="aside__title">
@@ -487,13 +489,13 @@
 										<a href="#" class="author__info-link">View Profile</a>
 									</div>
 								</div>
-										<ul class="author__awards-list">
-											<li class="icon-meh-o"></li>
-											<li class="icon-pagelines"></li>
-											<li class="icon-bolt"></li>
-											<li class="icon-foursquare"></li>
-											<li class="icon-yen"></li>
-										</ul>
+								<ul class="author__awards-list">
+									<li class="icon-meh-o"></li>
+									<li class="icon-pagelines"></li>
+									<li class="icon-bolt"></li>
+									<li class="icon-foursquare"></li>
+									<li class="icon-yen"></li>
+								</ul>
 							</div>
 							<div class="aside__item sales-number">
 								<div class="aside__item-sales">
@@ -528,10 +530,6 @@
 					</div>
 				</div>
 			</section>
-
-
-
-
 
 
 
@@ -612,12 +610,6 @@
 				</div>
 			</div>
 		</footer>
-
-
-
-
-
-
 	</div>
 
 
