--- a/app/about.html
+++ b/app/about.html
@@ -157,7 +157,6 @@
 											<div class="user__name">
 												<div class="user__info">
 													Mike Hussy
-
 													<div class="user__money">
 														$171.00
 													</div>
@@ -274,6 +273,8 @@
 				</div>
 			</section>
 
+
+
 			<div class="breadcrumbs">
 				<div class="container">
 					<div class="breadcrumbs__inner">
@@ -286,6 +287,7 @@
 			</div>
 
 
+
 			<section class="page-about">
 				<div class="container">
 					<div class="about__wrapper">
@@ -295,26 +297,34 @@
 						<div class="about__inner">
 							<div class="about__box">
 								<h3>What We Do</h3>
-								<p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centurbut a vfrrdyrtfglso survived  
-									but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the releas survived not  raseth
-									leap into electronic typesetting, remaining essentially unchanged. when an unknown printer took a galley of type and scrambled it to make a type specimen 
-									book. It has survived not only five centurbut a vfrrdyrtfglso survived  but also the leap into electronic typesetting, remaining essentially unchanged. It was po
-									pularised in the 1960s with the releas survived not  rasethleap into electronic typesetting, remaining essentially unchanged. </p>
+								<p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+									survived not only five centurbut a vfrrdyrtfglso survived
+									but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
+									the 1960s with the releas survived not raseth
+									leap into electronic typesetting, remaining essentially unchanged. when an unknown printer took a
+									galley of type and scrambled it to make a type specimen
+									book. It has survived not only five centurbut a vfrrdyrtfglso survived but also the leap into
+									electronic typesetting, remaining essentially unchanged. It was po
+									pularised in the 1960s with the releas survived not rasethleap into electronic typesetting, remaining
+									essentially unchanged. </p>
 							</div>
 							<div class="about__box">
 								<h3>Our Mission</h3>
-								<p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centurbut a vfrrdyrtfglso survived  
-									but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the releas survived not  raseth
-									leap into electronic typesetting, remaining essentially unchanged. when an unknown printer took a galley of type and scrambled it to make a type specimen 
-									book. It has survived not only five centurbut a vfrrdyrtfglso survived  but also the leap into electronic typesetting, remaining essentially unchanged. It was po
-									pularised in the 1960s with the releas survived not  rasethleap into electronic typesetting, remaining essentially unchanged. </p>
+								<p>when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has
+									survived not only five centurbut a vfrrdyrtfglso survived
+									but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in
+									the 1960s with the releas survived not raseth
+									leap into electronic typesetting, remaining essentially unchanged. when an unknown printer took a
+									galley of type and scrambled it to make a type specimen
+									book. It has survived not only five centurbut a vfrrdyrtfglso survived but also the leap into
+									electronic typesetting, remaining essentially unchanged. It was po
+									pularised in the 1960s with the releas survived not rasethleap into electronic typesetting, remaining
+									essentially unchanged. </p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</section>
-
-
 
 
 
