--- a/app/profile.html
+++ b/app/profile.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300,500;700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
@@ -280,58 +279,328 @@
 					<div class="breadcrumbs__inner">
 						<ul class="breadcrumbs__list">
 							<li><a href="#">Home</a></li>
-							<li><a href="#"><span>Contact us</span></a></li>
+							<li><a href="#">Product Page</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 
 
-			<div class="contact">
+			<section class="profile">
 				<div class="container">
-					<div class="contact__wrapper">
-						<div class="contact__head">
-							Contact With Us
-						</div>
-						<div class="contact__inner">
-							<div class="contact__map">
-								<iframe
-									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193730.89471857244!2d-74.01127423241515!3d40.6509333630181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24369470a592b%3A0x4109d18b6c5c7b05!2z0JrRg9C40L3RgSwg0J3RjNGOLdCZ0L7RgNC6LCDQodCo0JA!5e0!3m2!1sru!2sru!4v1601379375671!5m2!1sru!2sru"
-									frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+					<div class="profile__inner">
+						<div class="profile__aside">
+							<div class="profile__content">
+								<div class="aside__item">
+									<div class="aside__title">
+										Product Author
+									</div>
+									<div class="product__author-box">
+										<div class="author__avatar">
+											<img src="images/content/avatar.jpg" alt="">
+										</div>
+										<div class="author__info">
+											<div class="author__name">PsdBoss</div>
+											<div href="#" class="profile-status profile-on">Online</div>
+										</div>
+									</div>
+									<ul class="author__awards-list">
+										<li class="icon-meh-o"></li>
+										<li class="icon-pagelines"></li>
+										<li class="icon-bolt"></li>
+										<li class="icon-foursquare"></li>
+										<li class="icon-yen"></li>
+									</ul>
+								</div>
+								<ul class="footer__social-link footer__col-social">
+									<li><a class="link-facebook" href="#"></a></li>
+									<li><a class="link-twitter" href="#"></a></li>
+									<li><a class="link-youtube" href="#"></a></li>
+									<li><a class="link-lindelin" href="#"></a></li>
+								</ul>
 							</div>
-							<div class="contact__box">
-								<div class="contact__info">
-									<div class="contact__info-item">
-										<div class="contact__info-title icon-map-marker">Our Office Address</div>
-										<div class="contact__info-content">PO Box 16122 Collins Street West
-											Victoria 8007 Australia</div>
-									</div>
-									<div class="contact__info-item">
-										<div class="contact__info-title icon-phone">Phone</div>
-										<a href="tel:+61383766284" class="contact__info-content">+61 3 8376 6284</a>
-									</div>
-									<div class="contact__info-item">
-										<div class="contact__info-title icon-envelope-o">E-mail</div>
-										<div class="contact__info-content">info@foxtar.com</div>
+							<div class="profile__aside-btn">
+								<a class="profile__aside-message" href="#">Send message</a>
+								<a class="profile__aside-following" href="#">Following</a>
+							</div>
+						</div>
+						<div class="profile__content">
+							<div class="profile__banner">
+								<div class="profile__banner-images" style=""></div>
+							</div>
+							<div class="profile__items">
+								<div class="profile__item">
+									<div class="profile__item-title">Country:</div>
+									<div class="profile__item-content">England</div>
+								</div>
+								<div class="profile__item">
+									<div class="profile__item-title">Member Since:</div>
+									<div class="profile__item-content">December 26, 2014</div>
+								</div>
+								<div class="profile__item">
+									<div class="profile__item-title">Author Rating:</div>
+									<div class="profile__item-content">
+										<div class="rate-star"></div><span class="products__item-starnum">(05)</span>
 									</div>
 								</div>
-								<div class="contact__form">
-									<div class="contact__form-title">Drop Us A Message </div>
-									<form>
-										<div class="contact__form-row">
-											<input type="text" placeholder="Name*" required>
-											<input type="text" placeholder="E-mail*" required>
+								<div class="profile__item">
+									<div class="profile__item-title">Total Sales:</div>
+									<div class="profile__item-content profile__item-sales"> $ 5,030</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+
+		
+
+
+
+
+			<div class="settings profile-settings">
+				<div class="container">
+					<div class="product-one__tabs settings__tabs">
+						<div class="tabs">
+							<span class="tab active icon-user" data-id="1">About Me</span>
+							<span class="tab icon-suitcase" data-id="2">Products ( 10 )</span>
+							<span class="tab icon-envelope-o" data-id="3">Message Box</span>
+							<span class="tab icon-comments-o" data-id="4">Customer Reviews ( 20 )</span>
+							<span class="tab icon-users" data-id="5">Followers (100 )</span>
+						</div>
+						<div class="tab_content">
+							<div class="tab-item active-tab" id="1">
+								<div class="personal-box">
+									<div class="personal-box__title">
+										About Me:
+									</div>
+									<div class="personal-box__text">
+										<p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+											standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+											scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+											leap into electronic.</p>
+									</div>
+									<div class="personal-box__items">
+										<div class="personal-box__title">
+											Skills:
 										</div>
-										<textarea placeholder="Message*" required></textarea>
-										<button type="submit">Send Message</button>
-									</form>
+										<div class="personal-box__item">
+											<div class="personal-box__item-head">
+												<div class="personal-box__item-name">
+													Graphic Design
+												</div>
+												<div class="personal-box__item-number">
+													80%
+												</div>
+											</div>
+											<div class="personal-box__item-line">
+												<span style="max-width: 80%;"></span>
+											</div>
+										</div>
+										<div class="personal-box__item">
+											<div class="personal-box__item-head">
+												<div class="personal-box__item-name">
+													WordPress
+												</div>
+												<div class="personal-box__item-number">
+													90%
+												</div>
+											</div>
+											<div class="personal-box__item-line">
+												<span style="max-width: 90%;"></span>
+											</div>
+										</div>
+										<div class="personal-box__item">
+											<div class="personal-box__item-head">
+												<div class="personal-box__item-name">
+													Joomla
+												</div>
+												<div class="personal-box__item-number">
+													70%
+												</div>
+											</div>
+											<div class="personal-box__item-line">
+												<span style="max-width: 70%;"></span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="tab-item active-tab" id="2">
+								<div class="personal-box">
+									<div class="personal-box__title">
+										About Me:
+									</div>
+									<div class="personal-box__text">
+										<p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+											standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+											scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+											leap into electronic.</p>
+									</div>
+									<div class="personal-box__items">
+										<div class="personal-box__title">
+											Skills:
+										</div>
+										<div class="personal-box__item">
+											<div class="personal-box__item-head">
+												<div class="personal-box__item-name">
+													Graphic Design
+												</div>
+												<div class="personal-box__item-number">
+													80%
+												</div>
+											</div>
+											<div class="personal-box__item-line">
+												<span style="max-width: 80%;"></span>
+											</div>
+										</div>
+										<div class="personal-box__item">
+											<div class="personal-box__item-head">
+												<div class="personal-box__item-name">
+													WordPress
+												</div>
+												<div class="personal-box__item-number">
+													90%
+												</div>
+											</div>
+											<div class="personal-box__item-line">
+												<span style="max-width: 90%;"></span>
+											</div>
+										</div>
+										<div class="personal-box__item">
+											<div class="personal-box__item-head">
+												<div class="personal-box__item-name">
+													Joomla
+												</div>
+												<div class="personal-box__item-number">
+													70%
+												</div>
+											</div>
+											<div class="personal-box__item-line">
+												<span style="max-width: 70%;"></span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="tab-item active-tab" id="3">
+								<div class="personal-box">
+									<div class="personal-box__title">
+										About Me:
+									</div>
+									<div class="personal-box__text">
+										<p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+											standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+											scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+											leap into electronic.</p>
+									</div>
+									<div class="personal-box__items">
+										<div class="personal-box__title">
+											Skills:
+										</div>
+										<div class="personal-box__item">
+											<div class="personal-box__item-head">
+												<div class="personal-box__item-name">
+													Graphic Design
+												</div>
+												<div class="personal-box__item-number">
+													80%
+												</div>
+											</div>
+											<div class="personal-box__item-line">
+												<span style="max-width: 80%;"></span>
+											</div>
+										</div>
+										<div class="personal-box__item">
+											<div class="personal-box__item-head">
+												<div class="personal-box__item-name">
+													WordPress
+												</div>
+												<div class="personal-box__item-number">
+													90%
+												</div>
+											</div>
+											<div class="personal-box__item-line">
+												<span style="max-width: 90%;"></span>
+											</div>
+										</div>
+										<div class="personal-box__item">
+											<div class="personal-box__item-head">
+												<div class="personal-box__item-name">
+													Joomla
+												</div>
+												<div class="personal-box__item-number">
+													70%
+												</div>
+											</div>
+											<div class="personal-box__item-line">
+												<span style="max-width: 70%;"></span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="tab-item active-tab" id="4">
+								<div class="personal-box">
+									<div class="personal-box__title">
+										About Me:
+									</div>
+									<div class="personal-box__text">
+										<p>Bimply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+											standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+											scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+											leap into electronic.</p>
+									</div>
+									<div class="personal-box__items">
+										<div class="personal-box__title">
+											Skills:
+										</div>
+										<div class="personal-box__item">
+											<div class="personal-box__item-head">
+												<div class="personal-box__item-name">
+													Graphic Design
+												</div>
+												<div class="personal-box__item-number">
+													80%
+												</div>
+											</div>
+											<div class="personal-box__item-line">
+												<span style="max-width: 80%;"></span>
+											</div>
+										</div>
+										<div class="personal-box__item">
+											<div class="personal-box__item-head">
+												<div class="personal-box__item-name">
+													WordPress
+												</div>
+												<div class="personal-box__item-number">
+													90%
+												</div>
+											</div>
+											<div class="personal-box__item-line">
+												<span style="max-width: 90%;"></span>
+											</div>
+										</div>
+										<div class="personal-box__item">
+											<div class="personal-box__item-head">
+												<div class="personal-box__item-name">
+													Joomla
+												</div>
+												<div class="personal-box__item-number">
+													70%
+												</div>
+											</div>
+											<div class="personal-box__item-line">
+												<span style="max-width: 70%;"></span>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-
 
 
 		</div>
