--- a/app/settings.html
+++ b/app/settings.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300,500;700&display=swap" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.min.css">
@@ -109,6 +108,7 @@
 										</div>
 									</div>
 								</div>
+
 
 
 								<div class="basket__box">
@@ -280,57 +280,88 @@
 					<div class="breadcrumbs__inner">
 						<ul class="breadcrumbs__list">
 							<li><a href="#">Home</a></li>
-							<li><a href="#"><span>Contact us</span></a></li>
+							<li><a href="#">Settings</a></li>
 						</ul>
 					</div>
 				</div>
 			</div>
 
 
-			<div class="contact">
+			<div class="settings">
 				<div class="container">
-					<div class="contact__wrapper">
-						<div class="contact__head">
-							Contact With Us
+					<div class="product-one__tabs settings__tabs">
+						<div class="tabs">
+							<span class="tab active angle-right" data-id="1"> Personal Information</span>
+							<span class="tab angle-right" data-id="2">Profile</span>
+							<span class="tab angle-right" data-id="3">Badges</span>
+							<span class="tab angle-right" data-id="4">E-mail Settings</span>
+							<span class="tab angle-right" data-id="5">Social Network</span>
 						</div>
-						<div class="contact__inner">
-							<div class="contact__map">
-								<iframe
-									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193730.89471857244!2d-74.01127423241515!3d40.6509333630181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24369470a592b%3A0x4109d18b6c5c7b05!2z0JrRg9C40L3RgSwg0J3RjNGOLdCZ0L7RgNC6LCDQodCo0JA!5e0!3m2!1sru!2sru!4v1601379375671!5m2!1sru!2sru"
-									frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+						<div class="tab_content">
+							<div class="tab-item active-tab" id="1">
+								<div class="page-box">
+									<div class="page-box__title">
+										Personal Information
+									</div>
+									<div class="page-box__content">
+										<form>
+											<div class="setting__line">
+												<label>First Name</label>
+												<input type="text">
+											</div>
+											<div class="setting__line">
+												<label>Last Name</label>
+												<input type="text">
+											</div>
+											<div class="setting__line">
+												<label>Company Name</label>
+												<input type="text">
+											</div>
+											<div class="setting__line">
+												<label>Country</label>
+											<select>
+												<option>Select Your Country</option>
+												<option>Select Your Country</option>
+											</select>
+											</div>
+											<div class="setting__line">
+												<label>Address Line 1</label>
+												<input type="text">
+											</div>
+											<div class="setting__line">
+												<label>Address Line 2</label>
+												<input type="text">
+											</div>
+											<div class="setting__line">
+												<label>City</label>
+												<input type="text">
+											</div>
+											<div class="setting__line">
+												<label>State / Province / Region</label>
+												<input type="text">
+											</div>
+											<div class="setting__line">
+												<label>Zip / Postal Code</label>
+												<input type="text">
+											</div>
+										</form>
+									</div>
+								</div>
 							</div>
-							<div class="contact__box">
-								<div class="contact__info">
-									<div class="contact__info-item">
-										<div class="contact__info-title icon-map-marker">Our Office Address</div>
-										<div class="contact__info-content">PO Box 16122 Collins Street West
-											Victoria 8007 Australia</div>
-									</div>
-									<div class="contact__info-item">
-										<div class="contact__info-title icon-phone">Phone</div>
-										<a href="tel:+61383766284" class="contact__info-content">+61 3 8376 6284</a>
-									</div>
-									<div class="contact__info-item">
-										<div class="contact__info-title icon-envelope-o">E-mail</div>
-										<div class="contact__info-content">info@foxtar.com</div>
-									</div>
-								</div>
-								<div class="contact__form">
-									<div class="contact__form-title">Drop Us A Message </div>
-									<form>
-										<div class="contact__form-row">
-											<input type="text" placeholder="Name*" required>
-											<input type="text" placeholder="E-mail*" required>
-										</div>
-										<textarea placeholder="Message*" required></textarea>
-										<button type="submit">Send Message</button>
-									</form>
-								</div>
+							<div class="tab-item active-tab" id="2">
+
+							</div>
+							<div class="tab-item active-tab" id="3">
+
+							</div>
+							<div class="tab-item active-tab" id="4">
+
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
+
 
 
 
